# near-smart-contracts

./: .gitignore  Cargo.toml  README.md  dev.env
contracts/daosign_app/: Cargo.toml
contracts/daosign_app/src/: lib.rs
contracts/daosign_attestation/: Cargo.toml
contracts/daosign_attestation/src/: lib.rs
contracts/daosign_ed25519/: Cargo.toml
contracts/daosign_ed25519/src/: lib.rs
contracts/daosign_eip712/: Cargo.toml
contracts/daosign_eip712/src/: lib.rs  old_lib.rs
contracts/daosign_eip712_old/: Cargo.toml
contracts/daosign_eip712_old/src/: lib.rs
contracts/daosign_factory/: Cargo.toml
contracts/daosign_factory/src/: lib.rs
contracts/daosign_nft/src/: burning.rs  lib.rs
contracts/daosign_proof_of_agreement/: Cargo.toml
contracts/daosign_proof_of_agreement/src/: lib.rs
contracts/daosign_proof_of_authority/: Cargo.toml
contracts/daosign_proof_of_authority/src/: lib.rs
contracts/daosign_proof_of_signature/: Cargo.toml
contracts/daosign_proof_of_signature/src/: lib.rs
contracts/daosign_schema/: Cargo.toml
contracts/daosign_schema/src/: lib.rs
contracts/k256/: Cargo.toml
contracts/k256/src/: arithmetic.rs  ecdsa.rs  lib.rs  schnorr.rs
contracts/k256/src/arithmetic/: affine.rs  field.rs  hash2curve.rs  mul.rs  projective.rs  scalar.rs
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/daosign_app/: all.html  index.html
docs/daosign_eip712/: all.html  constant.CONTRACT_SOURCE_METADATA.html  fn.eip712_domain_type.html  fn.hash.html  fn.recover.html  fn.sha3.html  index.html  sidebar-items.js  struct.EIP712Domain.html  struct.EIP712DomainExt.html  struct.EIP712Message.html  struct.EIP712PropertyType.html  trait.Packable.html
docs/daosign_proof_of_agreement/: all.html  constant.CONTRACT_SOURCE_METADATA.html  index.html  sidebar-items.js  struct.ProofOfAgreement.html  struct.ProofOfAgreementExt.html
docs/daosign_proof_of_authority/: all.html  constant.CONTRACT_SOURCE_METADATA.html  fn.proof_of_authority_type.html  fn.signer_type.html  index.html  sidebar-items.js  struct.ProofOfAuthority.html  struct.ProofOfAuthorityExt.html  struct.Signer.html
docs/daosign_proof_of_signature/: all.html  constant.CONTRACT_SOURCE_METADATA.html  index.html  sidebar-items.js  struct.ProofOfSignature.html  struct.ProofOfSignatureExt.html
docs/k256/: index.html  struct.AffinePoint.html  struct.ProjectivePoint.html  struct.Scalar.html  struct.Secp256k1.html  type.CompressedPoint.html  type.EncodedPoint.html  type.FieldBytes.html  type.NonZeroScalar.html  type.PublicKey.html  type.SecretKey.html  type.U256.html  type.WideBytes.html
docs/k256/ecdsa/: index.html  struct.Error.html  struct.RecoveryId.html  type.DerSignature.html  type.Signature.html  type.SigningKey.html  type.VerifyingKey.html
docs/k256/ecdsa/hazmat/: fn.bits2field.html  fn.sign_prehashed.html  fn.verify_prehashed.html  index.html  trait.DigestPrimitive.html  trait.SignPrimitive.html  trait.VerifyPrimitive.html
docs/src/daosign_app/: lib.rs.html
docs/src/daosign_eip712/: lib.rs.html
docs/src/daosign_proof_of_agreement/: lib.rs.html
docs/src/daosign_proof_of_authority/: lib.rs.html
docs/src/daosign_proof_of_signature/: lib.rs.html
docs/src/k256/: arithmetic.rs.html  ecdsa.rs.html  lib.rs.html
docs/src/k256/arithmetic/: affine.rs.html  field.rs.html  mul.rs.html  projective.rs.html  scalar.rs.html
docs/trait.impl/borsh/de/: trait.BorshDeserialize.js
docs/trait.impl/borsh/ser/: trait.BorshSerialize.js
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/trait.impl/core/convert/: trait.AsRef.js  trait.From.js  trait.TryFrom.js
docs/trait.impl/core/default/: trait.Default.js
docs/trait.impl/core/fmt/: trait.Debug.js
docs/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/daosign_eip712/: trait.Packable.js
docs/trait.impl/elliptic_curve/: trait.Curve.js  trait.PrimeCurve.js
docs/trait.impl/elliptic_curve/arithmetic/: trait.CurveArithmetic.js
docs/trait.impl/elliptic_curve/field/: trait.FieldBytesEncoding.js
docs/trait.impl/elliptic_curve/ops/: trait.Invert.js  trait.LinearCombinationExt.js  trait.MulByGenerator.js  trait.Reduce.js  trait.ReduceNonZero.js
docs/trait.impl/elliptic_curve/point/: trait.AffineCoordinates.js  trait.BatchNormalize.js  trait.DecompactPoint.js  trait.DecompressPoint.js  trait.PointCompression.js
docs/trait.impl/elliptic_curve/scalar/: trait.FromUintUnchecked.js  trait.IsHigh.js
docs/trait.impl/elliptic_curve/sec1/: trait.FromEncodedPoint.js  trait.ToEncodedPoint.js
docs/trait.impl/ff/: trait.Field.js  trait.PrimeField.js
docs/trait.impl/group/: trait.Curve.js  trait.Group.js  trait.GroupEncoding.js
docs/trait.impl/group/prime/: trait.PrimeCurve.js  trait.PrimeCurveAffine.js  trait.PrimeGroup.js
docs/trait.impl/schemars/: trait.JsonSchema.js
docs/trait.impl/serde/de/: trait.Deserialize.js
docs/trait.impl/serde/ser/: trait.Serialize.js
docs/trait.impl/subtle/: trait.ConditionallySelectable.js  trait.ConstantTimeEq.js
docs/trait.impl/zeroize/: trait.DefaultIsZeroes.js
docs/type.impl/crypto_bigint/uint/: struct.Uint.js
docs/type.impl/ecdsa/: struct.Signature.js
docs/type.impl/ecdsa/der/: struct.Signature.js
docs/type.impl/ecdsa/signing/: struct.SigningKey.js
docs/type.impl/ecdsa/verifying/: struct.VerifyingKey.js
docs/type.impl/elliptic_curve/public_key/: struct.PublicKey.js
docs/type.impl/generic_array/: struct.GenericArray.js
res/: daosign_app.wasm  daosign_eip712.wasm  daosign_factory.wasm  non_fungible_token.wasm  test.js
res/utils/: .env.example  burn_nft.js  create_attestation.js  create_pos.js  create_schema.js  deploy_nft.js  index.html  mint_nft.js  readme.md  revoke_attestation.js  test.js
scripts/: build-eip712.sh  build-poau.sh  build.sh  deploy-eip712.sh  deploy-poau.sh  deploy.sh  get-domain.sh  get-greeting.sh  old-deploy.sh  random-acc.sh
src/: lib.rs
(+20 files in other folders)
