[package]
name = "daosign_app"
version = "1.0.0"
authors = ["Misha Kushka, CIDT <https://consideritdone.tech>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "5.7.0"
ed25519-dalek = "1.0.0"
borsh = "1.4.0"
borsh-derive = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
daosign_schema= { path = "../daosign_schema" }
daosign_attestation = { path = "../daosign_attestation" }
daosign_proof_of_signature = { path = "../daosign_proof_of_signature" }
daosign_proof_of_agreement = { path = "../daosign_proof_of_agreement" }
rand = "0.7.3" # For key generation randomness

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
hex = { version = "0.4", default-features = false }
serde_json = "1"



[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
