[package]
name = "daosign_ed25519"
version = "1.0.0"
authors = ["Misha Kushka, CIDT <https://consideritdone.tech>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"  
ed25519-dalek = "1.0.0"
rand = "0.7.3" # For key generation randomness
bs58 = "0.4"

[dependencies.getrandom]
version = "0.2.14"
features = ["js"]

[dev-dependencies]
near-workspaces = { version = "0.10.0", features = ["unstable"] }
hex = { workspace = true }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
