[package]
name = "daosign_eip712"
version = "1.0.0"
authors = ["Misha Kushka, CIDT <https://consideritdone.tech>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"
borsh = "1.4.0"
borsh-derive = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = { version = "0.13.3", features = ["ecdsa"] }
sha3 = "0.10.8"

[dependencies.getrandom]
version = "0.2.14"
features = ["js"]

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
hex = { workspace = true }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
