[package]
name = "daosign_schema"
version = "1.0.0"
authors = ["Misha Kushka, CIDT <https://consideritdone.tech>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"
serde = { version = "1.0.197", features = ["derive"] }
borsh = "1.4.0"
borsh-derive = "1.4.0"
serde_json = "1.0"
daosign_ed25519 = { path = "../daosign_ed25519" }
ed25519-dalek = "1.0.0"
rand = "0.7.3" # For key generation randomness

[dev-dependencies]
hex = { workspace = true }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
